# rust-pattern-viz

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEMO_CREATION.md  DEMO_RECORDING.md  LICENSE  OVERVIEW.md  README.md
.github/workflows/: ci.yml  deploy-demo.yml
assets/: .gitkeep
demo/: RECORDING_GUIDE.md  create_demo_gif.sh  example.rs
docs/: DEMO_RECORDING_GUIDE.md  VSCODE_EXTENSION.md  create-demo.md  demo-README.md  demo-after.rs  demo-before.rs  demo-script.sh
examples/: 01_option_unwrapping.rs  02_result_error_handling.rs  03_struct_destructuring.rs  04_enum_matching.rs  05_nested_patterns.rs  README.md  config.rs  error_handling.rs  nested_match.rs  option_pattern.rs  result_pattern.rs  sample.rs  svg_export.rs
scripts/: create_demo_gif_manual.sh  record_demo.sh
src/: analyzer.rs  lib.rs  lsp_server.rs  main.rs  models.rs  share.rs  svg_renderer.rs  visualizer.rs  wasm.rs  web_server.rs
tests/: integration_test.rs
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json  webpack.config.js
vscode-extension/src/: extension.ts  viewProvider.ts
wasm/src/: lib.rs
wasm/www/: index.js
web-demo/: .gitignore  README.md  index.html  vite.config.ts
web-demo/src/: App.css  App.tsx  examples.ts  index.css  types.ts  wasm-loader.ts
