[package]
name = "rust-pattern-viz"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Visualize Rust code patterns and decision trees"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-pattern-viz"
keywords = ["rust", "visualization", "patterns", "analysis"]
categories = ["development-tools", "visualization"]

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "rpv"
path = "src/main.rs"

[[bin]]
name = "rpv-lsp"
path = "src/lsp_server.rs"

[[example]]
name = "svg_export"
path = "examples/svg_export.rs"

[lib]
name = "rust_pattern_viz"
path = "src/lib.rs"
