[package]
name = "rust-pattern-viz"
version = "1.1.0"
edition = "2021"
authors = ["Zachr89"]
description = "Analyze and visualize Rust code patterns including match, if let, and while let expressions"
license = "MIT"
repository = "https://github.com/Zachr89/rust-pattern-viz"
keywords = ["rust", "patterns", "visualization", "analysis", "lsp"]
categories = ["development-tools", "visualization"]

[[bin]]
name = "rpv"
path = "src/main.rs"

[[bin]]
name = "rpv-lsp"
path = "src/lsp_server.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
