[package]
name = "rust-pattern-viz"
version = "1.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Visualize Rust pattern matching and control flow with AI-powered analysis"
license = "MIT"
repository = "https://github.com/yourusername/rust-pattern-viz"
keywords = ["rust", "visualization", "pattern-matching", "analysis", "wasm"]
categories = ["development-tools", "visualization", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rpv"
path = "src/main.rs"

[[bin]]
name = "rpv-lsp"
path = "src/lsp_server.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
